tests/pld-test-output/tests-Init-01_fail_semantic/pld-compile.txt
Error in input.c.
Error variable a is already defined. On position 5:6
   "  int a = b;"
          ^

1 error generated.

return code: 1
